--- a/theISCTEbay/.classpath
+++ b/theISCTEbay/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="src" path="/theDirectory"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
