--- a/P2PDowload/Diretorio/.project
+++ b/P2PDowload/Diretorio/.project
@@ -3,6 +3,7 @@
 	<name>Diretorio</name>
 	<comment></comment>
 	<projects>
+		<project>TheISCTEBay</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
